--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "nl.bedrijvendagen.bedrijvendagen"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 5
-        versionName "0.5"
+        versionCode 7
+        versionName "0.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation 'com.android.volley:volley:1.1.0'
 }
