--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:name="com.google.android.gms.vision.dependencies"
         android:value="barcode" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -15,6 +16,10 @@
     <uses-feature
         android:name="android.permission.INTERNET"
         android:required="false" />
+    <uses-feature
+        android:name="android.permission.ACCESS_NETWORK_STATE"
+        android:required="false"
+        />
 
     <application
         android:allowBackup="true"
