--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity android:name=".SecondErrorActivity" />
         <activity android:name=".ScannerActivity" />
+        <activity android:name=".ScannerActivityTwo" />
         <activity android:name=".LoadActivity" />
         <activity
             android:name=".StandardCommentActivity"
